Add Plausible Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Material UI Demo</title>
+    <script async defer data-domain="react-material-ui-demo.netlify.app" src="https://plausible.io/js/plausible.outbound-links.js"></script>
   </head>
   <body>
     <noscript>Please enable JavaScript to use this app.</noscript>
